Modify http error message for provide more detail data
