# account/application/command/create.handler.go
@@ -21,7 +21,7 @@ func (commandBus *CommandBus) handleCreateCommand(command *CreateCommand) {
 		hashedPassword,
 		imageKey,
 		command.Gender,
-		command.Intereste,
+		command.Interest,
 	)
 
 	commandBus.infrastructure.Email.Send([]string{command.Email}, "Account is created.")
